--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,37 @@
-# Compiled class file
-*.class
+../PerfumariaWebApp/Perfumaria/HELP.md
+target/
+!ProgWebPerfumaria/.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Log file
-*.log
+### IntelliJ IDEA ###
+ProgWebPerfumaria/.idea
+*.iws
+*.iml
+*.ipr
+ProgWebPerfumaria/.idea/
 
-# BlueJ files
-*.ctxt
+ProgWebPerfumaria/mvnw
+../mvnw.cmd
+ProgWebPerfumaria/src/main/resources/application.properties
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### VS Code ###
+.vscode/
